--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -11,7 +11,18 @@ body *::after {
 /* [class] {
   box-sizing: border-box;
 } */
-
+/* 스타일 초기화*/
+/*링크 스타일*/
+a {
+  text-decoration: none;
+  color: inherit;
+}
+/* a:hover {
+  color: blue;
+}
+a:focus {
+  color: green;
+} */
 html {
   font-size: 10px;
 }
@@ -36,14 +47,54 @@ body {
   width: 940px;
   margin: 0 auto;
 }
+/* 헤더 */
 .header {
-  background-color: yellow;
-  height: 10vh;
+  background-color: #fff;
+  position: relative;
+  border-radius: 0 0 15px 15px;
+  padding: 0 30px 50px;
   /* width: 940px; */
   /* border: 10px solid red;
   padding: 50px; */
   /* margin: 0 auto; width 가 있어야쓸 수 있다. auto margin trick */
 }
+/*로고*/
+
+.logo {
+  position: absolute;
+  /* background-color: yellow; */
+  margin-top: 0;
+  margin-bottom: 0;
+  top: 35px;
+  left: 30px;
+}
+
+/*안내링크*/
+.member {
+  margin: 0;
+  padding-left: 0;
+  font-size: 0;
+  text-align: right;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  position: relative;
+  left: 10px;
+  /* padding-top: 10px;
+  padding-bottom: 10px; */
+  /* color: red; */
+}
+.member li {
+  display: inline-block;
+  font-size: 1.4rem;
+}
+.member a {
+  display: inline-block;
+  padding: 8px 10px;
+  text-transform: uppercase;
+}
+/* .member li:last-child a {
+  padding-right: 0;
+} */
 .visual {
   background-color: limegreen;
   height: 10vh;
