feat: Layout main content using float
layout main content using float

--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -42,12 +42,18 @@ body *::after {
   background-color: blue;
   height: 60vh;
   padding: 30px;
-  display: flex;
-  justify-content: space-between;
+  display: flow-root;
+  padding: 30px 15px;
+}
+.group {
+  height: 60vh;
+  float: left;
+  margin: 0 15px;
 }
 .group1 {
   background-color: pink;
   width: 250px;
+  float: right;
 }
 .group2 {
   background-color: skyblue;
