--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -1,5 +1,17 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+@import url(./fontello.css);
 @import url(./normalize.css);
+/* 숨김 콘텐츠 */
+.a11y-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  visibility: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+}
 /* 스타일 초기화 */
 /* 링크 스타일 */
 a {
@@ -43,15 +55,16 @@ body *::after {
   background-color: #fff;
   position: relative;
   border-radius: 0 0 15px 15px;
-  padding: 0 30px 50px;
+  padding: 0 30px;
 }
 /* 로고 */
 .logo {
   position: absolute;
   margin-top: 0;
   margin-bottom: 0;
-  top: 35px;
+  top: 45px;
   left: 65px;
+  z-index: 10;
 }
 .logo a {
   display: block;
@@ -59,6 +72,7 @@ body *::after {
 .logo img {
   vertical-align: middle;
 }
+
 /* 안내링크 */
 .member {
   margin: 0;
@@ -79,6 +93,82 @@ body *::after {
   padding: 8px 10px;
   display: inline-block;
   text-transform: uppercase;
+}
+.navigation {
+  padding-bottom: 40px;
+}
+.menu {
+  background: #e25a2d
+    linear-gradient(
+      to bottom,
+      #e25a2d 0%,
+      #e29c2b 45%,
+      #e29c2b 60%,
+      #e25a2d 100%
+    );
+  padding-left: 225px;
+  margin: 5px 0 0 0;
+  list-style: none;
+  box-shadow: 0 -2px 0 0 #000;
+  border-radius: 0 0 5px 5px;
+  height: 45px;
+  /* border-top: 2px solid #000; */
+}
+.menu :focus {
+  outline: 0;
+}
+.menu-item {
+  position: relative;
+  float: left;
+  border-left: 2px solid #fff;
+}
+.menu-button {
+  display: block;
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 700;
+  padding: 0 20px;
+  line-height: 45px;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
+}
+.menu-act .menu-button {
+  color: #ff0;
+}
+.menu-act .menu-button::after {
+  content: "";
+  display: block;
+  border-top: 2px solid #000;
+}
+
+.sub-menu {
+  padding-left: 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  display: none;
+  top: 47px;
+  white-space: nowrap;
+}
+.sub-menu1 {
+  display: block;
+}
+.sub-menu1,
+.sub-menu2,
+.sub-menu3 {
+  left: 0;
+}
+.sub-menu4,
+.sub-menu5,
+.sub-menu6 {
+  right: 0;
+}
+
+.sub-menu li,
+.sub-menu a {
+  display: inline-block;
+}
+.sub-menu a {
+  padding: 10px 10px 10px 0;
 }
 .visual {
   background-color: lime;
