--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -177,16 +177,26 @@ body *::after {
     color: rgba(0, 0, 0, 0);
     /* margin: 0; */
     /* padding: 0; box */
-    top: 0;
-    left: 0;
+    /* top: 0;
+    left: 0; */
+    transform: translate(0, 0);
   }
   100% {
     font-size: 24px;
     color: rgba(0, 0, 0, 1);
     /* margin: 075px 0 0 400px; */
     /* padding: 075px 0 0 400px; */
-    top: 75px;
-    left: 400px;
+    /* top: 75px;
+    left: 400px; */
+    transform: translate(400px, 75px);
+  }
+}
+@keyframes flowerAni {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 .visual {
@@ -194,8 +204,40 @@ body *::after {
   height: 120px; /* 광고 같이 규격이 정해져있는 건 높이를 설정*/
   position: relative;
 }
-.visual-text {
+.visual::before,
+.visual::after {
   position: absolute;
+  content: ""; /*null값*/
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* animation-name: flowerAni;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate; */
+  animation: flowerAni 2s infinite alternate 1s;
+}
+.visual::before {
+  background-image: url(./images/ani_flower_01.png),
+    url(./images/ani_flower_02.png);
+  background-repeat: no-repeat;
+  background-position: 0 -10px, 670px 0;
+  /* background: ; */
+}
+.visual::after {
+  background-image: url(./images/ani_flower_03.png),
+    url(./images/ani_flower_04.png);
+  background-repeat: no-repeat;
+  background-position: 300px 10px, 800px 5px;
+  animation-delay: 1s;
+}
+.visual-text {
+  position: relative; /*살짝 떠있게 된다. = z-index를 가질 수 있다.*/
+  z-index: 10;
+  /* width: 500px; */
+  display: inline-block;
+  /* position: absolute; */
   font-family: Georgia, "Times New Roman", Times, serif; /* local font - 운영체제마다 다를 수 있다*/
   background-color: yellow;
   margin: 0;
