--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -536,6 +536,64 @@ body *::after {
 .icon-plus {
   color: hsla(110, 50%, 30%, 1);
 }
+
+/* 새소식 */
+.news {
+  margin-top: 20px;
+  position: relative;
+}
+.news::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: #ccc linear-gradient(90deg, #ccc, #fff);
+  top: 35px;
+  left: 0;
+}
+.news-heading {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #e25a2d;
+  margin: 0;
+}
+.news-more {
+  position: absolute;
+  padding: 8px;
+  top: -8px;
+  right: -8px;
+}
+.news-item {
+  padding-left: 130px;
+  position: relative;
+  margin: 30px;
+}
+.news-item-heading {
+  font-weight: 700;
+  margin: 0;
+}
+.news-item-date {
+  display: block;
+  margin-top: 5px;
+}
+.news-item-brief {
+  line-height: 1.5;
+  margin: 10px 0 0 0;
+}
+
+.news-item-thumbnail {
+  margin: 0;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  text-align: center;
+}
+
+.news-item-thumbnail img {
+  margin-bottom: 15px;
+  box-shadow: 0 15px 20px 0px rgba(0, 0, 0, 0.6);
+}
+
 .slogan {
   background-color: purple;
   height: 10vh;
