feat: grid를 이용한 레이아웃

--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -564,29 +564,42 @@ body *::after {
   right: -8px;
 }
 .news-item {
-  padding-left: 130px;
   position: relative;
   margin: 30px;
+  display: grid;
+  grid-template-columns: 130px 1fr; /*전체크기에서 130px를 빼고*/
+  grid-template-rows: auto auto auto;
 }
 .news-item-heading {
   font-weight: 700;
   margin: 0;
+  grid-column-start: 2; /*line number 기준*/
+  grid-column-end: 3;
 }
 .news-item-date {
   display: block;
   margin-top: 5px;
+  grid-column-start: 2; /*line number 기준*/
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 .news-item-brief {
   line-height: 1.5;
   margin: 10px 0 0 0;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
 
 .news-item-thumbnail {
   margin: 0;
-  position: absolute;
-  top: 2px;
-  left: 0;
-  text-align: center;
+  /* text-align: center; */
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 4;
 }
 
 .news-item-thumbnail img {
