--- a/exHTML5/css/stylesheet.css
+++ b/exHTML5/css/stylesheet.css
@@ -567,14 +567,21 @@ body *::after {
   position: relative;
   margin: 30px;
   display: grid;
+  grid-column-gap: 20px;
   grid-template-columns: 130px 1fr; /*전체크기에서 130px를 빼고*/
   grid-template-rows: auto auto auto;
+  grid-template-areas:
+    "thumbnail heading"
+    "thumbnail date"
+    "thumbnail brief";
 }
 .news-item-heading {
   font-weight: 700;
   margin: 0;
-  grid-column-start: 2; /*line number 기준*/
-  grid-column-end: 3;
+  /* grid-column-start: 2; line number 기준 */
+  /* grid-column-end: 3; */
+  /* grid-column: 2 / 3; */
+  grid-area: heading;
 }
 .news-item-date {
   display: block;
@@ -583,23 +590,23 @@ body *::after {
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  grid-area: date;
 }
 .news-item-brief {
   line-height: 1.5;
   margin: 10px 0 0 0;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  /* grid-area: 3 / 2 / 4 / 3; */
+  grid-area: brief;
 }
 
 .news-item-thumbnail {
   margin: 0;
   /* text-align: center; */
-  grid-column-start: 1;
+  /* grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
-  grid-row-end: 4;
+  grid-row-end: 4; */
+  grid-area: thumbnail;
 }
 
 .news-item-thumbnail img {
